5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3392/executions/1578_1332.log
== TEST (2019-03-20 19:01:53) 
-- CODE:
aresta =5
area = 3/2*3**1/2*aresta**2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:02:22) 
-- CODE:
aresta =5
area = 3/2*3**1/2*aresta**2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:02:32) 
-- CODE:
aresta =5
area =3/2*3**1/2*aresta**2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:54) 
-- CODE:
aresta =5
area =3/2*3**1/2*aresta**2
 print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:07) 
-- CODE:
aresta =5
area =3/2*3**1/2*aresta**2
 print(round(area,4))
-- ERROR:
File "XXXX", line 3
    print(round(area,4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:59) 
-- CODE:
aresta =5
area =3/2*3**1/2*aresta**2
 print(round(area,4))
-- ERROR:
File "XXXX", line 3
    print(round(area,4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:05:58) 
-- CODE:
aresta =5
area =3/2*3**0.5*aresta**2
 print(round(area,4))
-- ERROR:
File "XXXX", line 3
    print(round(area,4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:06:07) 
-- CODE:
aresta =5
area =3/2*3**0.5*aresta**2
print(round(area,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:06:15) 
-- CODE:
aresta =5
area =3/2*3**0.5*aresta**2
print(round(area,4))
-- EXECUTION TIME:
0.304945
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
